<resources>
    <string name="app_name">DoSoptTemplate</string>
    <!-- sign in -->
    <string name="tv_sign_in_title">Welcome to Sopt</string>
    <string name="tv_sign_in_id_label">ID.</string>
    <string name="et_sign_in_id">아이디를 입력해주세요.</string>
    <string name="tv_sign_in_pw_label">PW.</string>
    <string name="et_sign_in_pw">비밀번호를 입력해주세요.</string>
    <string name="btn_sign_in_signin_label">SIGN IN</string>
    <string name="btn_sign_in_signup_label">SIGN UP</string>
    <string name="error_message_invalid_sign_in">로그인에 실패했습니다.</string>
    <string name="success_message_valid_sign_in">로그인에 성공했습니다.</string>
    <string name="tv_sign_in_error_message">아이디 또는 비밀번호를 잘못 입력했습니다. \n입력하신 내용을 다시 확인해주세요.</string>

    <!-- sign up -->
    <string name="tv_sign_up_id_label">[ID]</string>
    <string name="tv_sign_up_pw_label">[PW]</string>
    <string name="tv_sign_up_nickname_label">[NICKNAME]</string>
    <string name="tv_sign_up_drinking_capacity_label">[DRINKING CAPACITY]</string>
    <string name="et_sign_up_nickname">닉네임을 입력해주세요.</string>
    <string name="et_sign_up_drinking_capacity">주량을 입력해주세요.</string>
    <string name="tv_sign_up_title">SIGN UP</string>
    <string name="btn_sign_up_signup_label">회원가입 하기</string>
    <string name="success_message_sign_up">회원가입에 성공했습니다.</string>
    <string name="error_message_sign_up_id">아이디는 영문, 숫자가 포함되어야 하며 6~10글자 이내입니다.</string>
    <string name="error_message_sign_up_pw">비밀번호는 영문, 숫자, 특수문자가 포함되어야 하며 6~12글자 이내입니다.</string>
    <string name="error_message_sign_up_nickname">닉네임을 입력해주세요.</string>
    <string name="error_message_sign_up_drinking_capacity">주량은 ~병으로 입력해주세요.</string>

    <!-- main -->
    <string name="message_back_to_exit_pressed">뒤로 가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="menu_do_android_label">DO ANDROID</string>
    <string name="menu_home_label">홈</string>
    <string name="menu_my_page_label">마이페이지</string>
    <string name="tv_dummy_data">테스트테스트</string>

    <!-- my page -->
    <string name="content_description_iv_main_profile">프로필 사진입니다.</string>
    <string name="btn_main_sign_out_label">SIGN OUT</string>

    <!-- home -->
    <string name="iv_content_description_item_home_profile_image">나의 프로필 사진입니다.</string>
    <string name="iv_content_description_item_home_friend_profile_image">친구 프로필 사진입니다.</string>
    <string name="iv_content_description_item_home_my_profile_detail">나의 프로필 더보기입니다.</string>
    <string name="tv_item_home_my_profile_statue_message">상태메시지</string>
    <string name="tv_item_home_birthday_friend_profile_gift">선물하기</string>
    <string name="error_message_get_profile_data">profile 데이터 수신 실패</string>
    <string name="errorMessage400">이미 존재하는 사용자입니다.</string>
</resources>