<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/iv_item_home_my_profile_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:contentDescription="@string/iv_content_description_item_home_profile_image"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_main_cat" />

        <TextView
            android:id="@+id/tv_item_home_my_profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.DoSopt.Body01"
            app:drawableEndCompat="@drawable/ic_my_profile_detail_grey_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_item_home_my_profile_status_message"
            app:layout_constraintStart_toEndOf="@id/iv_item_home_my_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_dummy_data" />


        <TextView
            android:id="@+id/tv_item_home_my_profile_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_grey400_stroke_20_rect"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/tv_item_home_my_profile_statue_message"
            android:textAppearance="@style/TextAppearance.DoSopt.Body03"
            android:textColor="@color/grey_600"
            app:drawableEndCompat="@drawable/ic_my_profile_status_message_grey_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>