<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.sopt.dosopttemplate.features.account.SignUpViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up_signup_label"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/tv_sign_up_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/tv_sign_up_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.DoSopt.Title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_up_label_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_sign_up_id_label"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:boxStrokeColor="@{vm.isIdValid() ? @color/yellow_main : @color/pink }"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_label_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_sign_in_id"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:text="@={vm._id}"
                        android:textAppearance="@style/TextAppearance.DoSopt.Body02" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_id_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/et_sign_up_id_error"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body03"
                    android:textColor="@color/pink"
                    android:visibility="@{vm.isIdValid() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_id"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_id" />


                <TextView
                    android:id="@+id/tv_sign_up_label_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_sign_in_pw_label"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id_error" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_pw"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@{vm.isPwValid() ? @color/yellow_main : @color/pink }"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_label_pw">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_sign_in_pw"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:text="@={vm._pw}"
                        android:textAppearance="@style/TextAppearance.DoSopt.Body02" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_pw_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/et_sign_up_pw_error"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body03"
                    android:textColor="@color/pink"
                    android:visibility="@{vm.isPwValid() ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_pw"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_pw"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_pw" />

                <TextView
                    android:id="@+id/tv_sign_up_label_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_sign_up_nickname_label"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw_error" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sign_up_nickname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@{vm.isNicknameValid() ? @color/yellow_main : @color/pink }"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_label_nickname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sign_up_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et_sign_up_nickname"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:text="@={vm._nickname}"
                        android:textAppearance="@style/TextAppearance.DoSopt.Body02" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up_nickname_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/et_sign_up_nickname_error"
                    android:textAppearance="@style/TextAppearance.DoSopt.Body03"
                    android:textColor="@color/pink"
                    android:visibility="@{vm.isNicknameValid() ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="@id/layout_sign_up_nickname"
                    app:layout_constraintStart_toStartOf="@id/layout_sign_up_nickname"
                    app:layout_constraintTop_toBottomOf="@id/layout_sign_up_nickname" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up_signup_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@color/yellow_sub"
            android:backgroundTint="@{vm.isIdValid() &amp; !vm._id.isBlank() &amp; vm.isPwValid() &amp; !vm._pw.isBlank() &amp; vm.isNicknameValid() &amp; !vm._nickname.isBlank()? @color/yellow_main : @color/grey_600 }"
            android:enabled="@{vm.isIdValid() &amp; !vm._id.isBlank() &amp; vm.isPwValid() &amp; !vm._pw.isBlank() &amp; vm.isNicknameValid() &amp; !vm._nickname.isBlank()  }"
            android:stateListAnimator="@null"
            android:text="@string/btn_sign_up_signup_label"
            android:textAppearance="@style/TextAppearance.DoSopt.Body02"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>