<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/iv_item_home_birthday_friend_profile_image"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/iv_content_description_item_home_friend_profile_image"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_main_cat" />

        <TextView
            android:id="@+id/tv_item_home_birthday_friend_profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.DoSopt.Body02"
            app:drawableEndCompat="@drawable/ic_birthday_profile_cake_pink_24"
            app:layout_constraintBottom_toTopOf="@id/tv_item_home_birthday_friend_profile_day"
            app:layout_constraintEnd_toStartOf="@id/tv_item_home_birthday_friend_profile_gift"
            app:layout_constraintStart_toEndOf="@id/iv_item_home_birthday_friend_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_dummy_data" />

        <TextView
            android:id="@+id/tv_item_home_birthday_friend_profile_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.DoSopt.Body03"
            android:textColor="@color/grey_600"
            app:layout_constraintBottom_toBottomOf="@id/iv_item_home_birthday_friend_profile_image"
            app:layout_constraintStart_toEndOf="@id/iv_item_home_birthday_friend_profile_image"
            app:layout_constraintTop_toBottomOf="@id/tv_item_home_birthday_friend_profile_name"
            tools:text="오늘 10월 24일" />


        <TextView
            android:id="@+id/tv_item_home_birthday_friend_profile_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_pink_stroke_20_rect"
            android:drawablePadding="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/tv_item_home_birthday_friend_profile_gift"
            android:textAppearance="@style/TextAppearance.DoSopt.Body03"
            android:textColor="@color/grey_600"
            app:drawableEndCompat="@drawable/ic_birthday_profile_gift_pink_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>